umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_indigo_legio_ugi_iso.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 8
bond_count: 8
sum_formula: C7N
graph6: GhEGGC
