umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_indigo_sgroups.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 40
bond_count: 36
sum_formula: C40
graph6: ghCGGC??G??@?@??_?G?@?????G??G??C??@???G???_??@????????_???G???@????C????G????G????C??????????G?????_@???@?C??????????_?????G????@@
