umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_indigo_test_015.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 41
sum_formula: C29N4O6
graph6: fhEG___G?GO?_?@????O@??C??G??G?@C??C??@???O??@???G????????OG???@????C????G???AG????O????G????C?????_?????O????O?????O??????O?
